Correção do erro ENUM